# SMSdirections

./: README.md
simple/: .dir-locals.el  simple.cabal  simple.cabal~
simple/app/: Main.hs
simple/src/: EmailParse.hs  EmailParse.hs~  Lib.hs  Lib.hs~  SendEmail.hs
